variables, constantes, funcion radio sch. y while para ingreso datos usuario

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./script.js"></script>
+    <script async src="./script.js"></script>
     <title>Desarrollo CoderHouse</title>
 </head>
 <body>
-    <h1>Página en blanco</h1>
-    <p>Esta página será más bonita más adelante en el curso. Por ahora no se necesita más</p>
+    <h1>Simulador Astronómico</h1>
+    <p>El simulador calcula algunos indicadores astronómicos como la velocidad de escape de un cuerpo celeste</p>
 </body>
 </html>
