detalle html y calcular velocidad de escape

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Simulador Astronómico</h1>
     <p>El simulador calcula algunos indicadores astronómicos como la velocidad de escape de un cuerpo celeste</p>
+    <p>los resultados de las operaciones-funciones están como output en la consola</p>
 </body>
 </html>
