modificacion html inicial y ajsute nuevo js: constantes y clase Cuerpo

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script async src="./script.js"></script>
-    <title>Desarrollo CoderHouse</title>
+    <script async src="./script2.js"></script>
+    <title>Calculadora Científica</title>
 </head>
 <body>
-    <h1>Simulador Astronómico</h1>
-    <p>El simulador calcula algunos indicadores astronómicos como la velocidad de escape de un cuerpo celeste</p>
-    <p>los resultados de las operaciones-funciones están como output en la consola</p>
+    <h1 id="titulo">Simulador Astronómico</h1>
+    <p id="explicacion">El simulador calcula algunos indicadores astronómicos como la velocidad de escape de un cuerpo celeste</p>
+
+    <ul></ul>
 </body>
 </html>
