contador y logica contador

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <h1 id="titulo">Simulador Astronómico</h1>
     <p id="explicacion">El simulador calcula algunos indicadores astronómicos como la velocidad de escape de un cuerpo celeste</p>
-
-    <ul></ul>
+    <p>Elementos disponibles: <span id="contador">4</span></p>
+    <ul>
+        
+    </ul>
 </body>
 </html>
