--- a/index.html
+++ b/index.html
@@ -9,9 +9,30 @@
 <body>
     <h1 id="titulo">Simulador Astronómico</h1>
     <p id="explicacion">El simulador calcula algunos indicadores astronómicos como la velocidad de escape de un cuerpo celeste</p>
+
+    <h3>Ingrese hasta 4 elementos</h3>
+
     <p>Elementos disponibles: <span id="contador">4</span></p>
+
+    <section class="formulario">
+        <div>
+            <label for="nombre">Nombre:</label>
+            <input type="text" id="nombre">
+        </div>
+        <div>
+            <label for="masa">Masa:</label>
+            <input type="number" id="masa">
+        </div>
+        <div>
+            <label for="diametro">Diámetro:</label>
+            <input type="number" id="diametro">
+        </div>
+          <button onclick="agregarObjeto()">Agregar Objeto</button>
+    </section>
+
+    <!-- Listado con los resultados -->
     <ul>
-        
+
     </ul>
 </body>
 </html>
