--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script async src="./script2.js"></script>
+    <script defer src="./script2.js"></script>
     <title>Calculadora Científica</title>
 </head>
 <body>
