--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
     <p>Elementos disponibles: <span id="contador">4</span></p>
 
     <section class="formulario">
-        <div>
+        <div class = seccion-formulario>
             <label for="nombre">Nombre:</label>
             <input type="text" id="nombre">
         </div>
-        <div>
+        <div class = seccion-formulario>
             <label for="masa">Masa:</label>
             <input type="number" id="masa">
         </div>
-        <div>
+        <div class = seccion-formulario>
             <label for="diametro">Diámetro:</label>
             <input type="number" id="diametro">
         </div>
-          <button onclick="agregarObjeto()">Agregar Objeto</button>
+          <button onclick="agregarObjeto()" class="boton-formulario">Agregar Objeto</button>
     </section>
 
     <!-- Listado con los resultados -->
