--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 <body>
     <header>
         <h1 id="titulo">Simulador Astronómico</h1>
+        <nav>
+            <ul>
+                <li><a href="html/planetas.html">Planetas</a></li>
+                <li><a href="./index.html">Simulador</a></li>
+            </ul>
+        </nav>
         <p id="explicacion">El simulador calcula algunos indicadores astronómicos como la velocidad de escape de un cuerpo celeste</p>
         <h3>Ingrese hasta 4 elementos</h3>
     </header>
