--- a/html/planetas.html
+++ b/html/planetas.html
@@ -3,19 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
     <title>Planetas</title>
 </head>
 <body>
+    
     <header>
         <h1 id="titulo">Visita planetas</h1>
         <nav>
             <ul>
-                <li><a href="html/planetas.html">PLanetas</a></li>
-                <li><a href="./index.html">Simulador</a></li>
+                <li><a href="./planetas.html">Planetas</a></li>
+                <li><a href="../index.html">Simulador</a></li>
             </ul>
         </nav>
     </header>
-    
+
+    <div id="container"></div>
+    <script src="../script2.js"></script>
 </body>
 </html>
