--- a/html/planetas.html
+++ b/html/planetas.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <link rel="stylesheet" href="../css/style.css">
     <title>Planetas</title>
 </head>
 <body>
     
-    <header>
+    <header>        
         <h1 id="titulo">Visita planetas</h1>
         <nav>
             <ul>
@@ -16,6 +16,8 @@
                 <li><a href="../index.html">Simulador</a></li>
             </ul>
         </nav>
+        <h3 id="subtitulo">Selecciona los planetas donde quieres pasar tus vacaciones</h2>
+
     </header>
 
     <div id="container"></div>
