--- a/html/planetas.html
+++ b/html/planetas.html
@@ -16,7 +16,8 @@
                 <li><a href="../index.html">Simulador</a></li>
             </ul>
         </nav>
-        <h3 id="subtitulo">Selecciona los planetas donde quieres pasar tus vacaciones</h2>
+        <h3 id="subtitulo">Selecciona los planetas donde quieres pasar tus vacaciones</h3>
+        <p>Disponibles: <span id="contador-planetas">4</span></p>
 
     </header>
 
