Barra de busqueda y estilos

--- a/html/planetas.html
+++ b/html/planetas.html
@@ -16,11 +16,14 @@
                 <li><a href="../index.html">Simulador</a></li>
             </ul>
         </nav>
-        <h3 id="subtitulo">Selecciona los planetas donde quieres pasar tus vacaciones</h3>
-        <p>Disponibles: <span id="contador-planetas">4</span></p>
+
 
     </header>
-
+    <h3 id="subtitulo">Selecciona los planetas donde quieres pasar tus vacaciones</h3>
+    <p>Disponibles: <span id="contador-planetas">4</span></p>
+    <div class="barra">            
+        <input type="text" id="barra-busqueda" placeholder="Busca planeta">
+    </div>
     <div id="container"></div>
     <script src="../script2.js"></script>
 </body>
