--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <label for="diametro">Diámetro:</label>
           <input type="number" id="diametro" min="0" />
         </div>
-        <button onclick="agregarObjeto()" class="boton-formulario">
+        <button id="botonEnviarFormulario" class="boton-formulario">
           Agregar Objeto
         </button>
       </div>
