--- a/html/planetas.html
+++ b/html/planetas.html
@@ -20,11 +20,11 @@
 
     </header>
     <h3 id="subtitulo">Selecciona los planetas donde quieres pasar tus vacaciones</h3>
-    <p>Disponibles: <span id="contador-planetas">4</span></p>
     <div class="barra">            
         <input type="text" id="barra-busqueda" placeholder="Busca planeta">
     </div>
     <div id="container"></div>
+    <div id="seleccionados"></div>
     <script src="../script2.js"></script>
 </body>
 </html>
